BUGFIX: remove enwrapping p tags from unneeded elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   font-weight: lighter;
 }
 
-.intro p {
+.intro h4 {
   font-style: italic;
 }
 
